--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -21,9 +21,12 @@
         <!-- Specifies whether or not to draw a shadow around your circular image. -->
         <attr name="shadow" format="boolean"/>
     </declare-styleable>
-    
+
     <declare-styleable name="CustomCircularImageViewTheme">
         <attr name="circularImageViewStyle" format="reference" />
+    </declare-styleable>
+    <declare-styleable name="FABCenterLayout">
+        <attr name="top_id" format="reference" />
     </declare-styleable>
 
 </resources>
