--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,12 @@ dark-bar {
         background-size: 200px;
         background-repeat: no-repeat;
     }
+    .navbar-default .navbar-nav {
+        margin-top: 0;
+    }
     .navbar-default .navbar-nav  a  {
         background-image: none !important;
+        background-color: #1b3d65 !important;
         border-left: 3px solid rgba(0,0,0,0);
         box-shadow: none;
     }
