--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -28,13 +28,35 @@
             app:spb_mirror_mode="false"
             android:id="@id/smoothBar" />
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@id/issueDetailInfo"
             android:background="@color/accent">
 
-        </FrameLayout>
+            <ImageView
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:id="@id/avatarAuthor"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_margin="@dimen/gapLarge"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/issueTitle"
+                android:layout_toRightOf="@id/avatarAuthor"
+                android:layout_toEndOf="@id/avatarAuthor"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignBottom="@id/avatarAuthor"
+                android:layout_alignTop="@id/avatarAuthor"
+                android:layout_marginRight="@dimen/gapLarge"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
 
     </FrameLayout>
 
