--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
 
     <color name="lDialogPositve">#ffffffff</color>
     <color name="lDialogNegative">#ff808080</color>
+    <color name="privateRepo">#a1882b</color>
+    <color name="privateRepoBackground">#f8eeca</color>
 
     <string name="lDialogPositve">#ffffffff</string>
     <string name="lDialogNegative">#ff808080</string>
