--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="gapXXXLarge">128dp</dimen>
 
     <!-- http://developer.android.com/design/style/typography.html -->
+    <dimen name="textSizeXMicro">10sp</dimen>
     <dimen name="textSizeMicro">12sp</dimen>
     <dimen name="textSizeSmall">14sp</dimen>
     <dimen name="textSizeMedium">18sp</dimen>
