Comment issue dialog

--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -1,9 +1,9 @@
 <android.widget.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
     android:orientation="vertical"
     app:top_id="@id/top"
     android:id="@+id/fabLayout">
@@ -20,7 +20,7 @@
             android:layout_height="4dp"
             android:indeterminate="true"
             app:spb_sections_count="4"
-            app:spb_color="@color/white"
+            app:spb_colors="@array/colorsSmoothWhite"
             app:spb_speed="2.0"
             app:spb_stroke_width="4dp"
             app:spb_stroke_separator_length="4dp"
