--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,6 @@
     <dimen name="textSizeMedium">18sp</dimen>
     <dimen name="textSizeLarge">22sp</dimen>
     <dimen name="fab">56dp</dimen>
+    <dimen name="floattingActivityWidth">300dp</dimen>
+    <dimen name="floattingActivityHeight">400dp</dimen>
 </resources>
