Commits list first impl

--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -1,4 +1,4 @@
-<android.widget.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.alorma.github.ui.view.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
@@ -68,4 +68,4 @@
         android:layout_below="@id/top"
         android:layout_alignParentBottom="true"/>
 
-</android.widget.FABCenterLayout>
+</com.alorma.github.ui.view.FABCenterLayout>
