--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/list_selector"
     android:gravity="center_vertical">
 
-    <CircularImageView
+    <com.alorma.github.ui.view.CircularImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/chevron"
