--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -1,24 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeightLarge"
-    android:background="@drawable/list_selector"
-    android:gravity="center_vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-    <com.alorma.github.ui.view.CircularImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/chevron"
-        android:src="@drawable/ic_contact_picture"
-        android:layout_margin="16dp" />
-
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/forkNameRepo"
-        android:layout_marginLeft="16dp"
-        android:gravity="center_vertical" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_card"
+        android:layout_marginLeft="@dimen/gapMedium"
+        android:layout_marginRight="@dimen/gapMedium"
+        android:layout_marginStart="@dimen/gapMedium"
+        android:layout_marginEnd="@dimen/gapMedium"
+        android:layout_marginTop="@dimen/gapMedium"
+        android:layout_marginBottom="@dimen/gapSmall">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <com.alorma.github.ui.view.CircularImageView
+                android:layout_width="@dimen/avatar_size_list"
+                android:layout_height="@dimen/avatar_size_list"
+                android:id="@+id/authorAvatar"
+                android:src="@drawable/ic_contact_picture"
+                android:layout_margin="@dimen/gapMedium"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Large Text"
+                android:id="@+id/authorLogin"
+                android:layout_marginLeft="@dimen/gapMedium"
+                android:layout_marginStart="@dimen/gapMedium"
+                android:paddingTop="0dp"
+                android:textSize="@dimen/textSizeXLarge"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@color/accentDark"
+                android:layout_toEndOf="@+id/authorAvatar"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/authorAvatar"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/authorDate"
+                android:layout_below="@+id/authorLogin"
+                android:layout_alignLeft="@+id/authorLogin"
+                android:layout_alignStart="@+id/authorLogin"/>
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
