--- a/app/src/main/res/layout/repo_detail_activity.xml
+++ b/app/src/main/res/layout/repo_detail_activity.xml
@@ -33,11 +33,11 @@
                 android:text="@string/issues"
                 android:id="@+id/tabIssues" />
 
-            <com.alorma.github.ui.view.TabTitle
+<!--            <com.alorma.github.ui.view.TabTitle
                 style="@style/tab_repos"
                 app:barColor="@color/white"
                 android:text="@string/commits"
-                android:id="@+id/tabCommits" />
+                android:id="@+id/tabCommits" />-->
 
         </LinearLayout>
 
