Showing branches on repo detail

--- a/app/src/main/res/layout/repo_detail_activity.xml
+++ b/app/src/main/res/layout/repo_detail_activity.xml
@@ -24,6 +24,7 @@
                 android:layout_marginStart="@dimen/gapLarge"
                 android:layout_marginRight="@dimen/gapMedium"
                 android:layout_marginEnd="@dimen/gapMedium"
+                android:id="@+id/repoDetailBranches"
                 android:background="@drawable/spinner_ab_background"/>
 
             <Spinner
