--- a/app/src/main/res/layout/repo_detail_activity.xml
+++ b/app/src/main/res/layout/repo_detail_activity.xml
@@ -14,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="?android:attr/actionBarSize"
             android:orientation="horizontal">
 
             <Spinner
