--- a/app/src/debug/res/values/colors.xml
+++ b/app/src/debug/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent">#54A141</color>
-    <color name="accentDark">#41A15E</color>
-    <color name="complementary">#8E41A1</color>
+    <color name="accent">#8E41A1</color>
+    <color name="accentDark">#ff513062</color>
+    <color name="complementary">#ffa18a2b</color>
 </resources>
