--- a/app/src/main/res/layout/activity_issue_detail.xml
+++ b/app/src/main/res/layout/activity_issue_detail.xml
@@ -1,71 +1,29 @@
-<com.alorma.github.ui.view.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:top_id="@id/top"
-    android:id="@+id/fabLayout">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              app:top_id="@id/top"
+              android:id="@+id/fabLayout"
+              android:divider="@drawable/divider_main"
+              android:showDividers="middle">
 
-    <FrameLayout
-        android:id="@id/top"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="140dp"
-        android:layout_alignParentTop="true">
-
-        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:indeterminate="true"
-            app:spb_sections_count="4"
-            app:spb_colors="@array/colorsSmoothWhite"
-            app:spb_speed="2.0"
-            app:spb_stroke_width="4dp"
-            app:spb_stroke_separator_length="4dp"
-            app:spb_reversed="false"
-            app:spb_mirror_mode="false"
-            android:id="@id/smoothBar" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@id/issueDetailInfo"
-            android:background="@color/accent">
-
-            <ImageView
-                android:layout_width="72dp"
-                android:layout_height="72dp"
-                android:id="@id/avatarAuthor"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_margin="@dimen/gapLarge"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/issueTitle"
-                android:layout_toRightOf="@id/avatarAuthor"
-                android:layout_toEndOf="@id/avatarAuthor"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignBottom="@id/avatarAuthor"
-                android:layout_alignTop="@id/avatarAuthor"
-                android:layout_marginRight="@dimen/gapLarge"
-                android:layout_marginEnd="@dimen/gapLarge"
-                android:textColor="@color/white"/>
-        </RelativeLayout>
-
-    </FrameLayout>
+        android:layout_height="@dimen/menuSize"
+        android:id="@+id/issueState"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/gapLarge"
+        android:paddingStart="@dimen/gapLarge"
+        android:fontFamily="sans-serif-light"
+        android:textSize="@dimen/textSizeLarge"
+        android:background="@color/accent"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/discussionFeed"
-        android:layout_below="@id/top"
-        android:layout_alignParentBottom="true"/>
+        android:id="@+id/discussionFeed"/>
 
-</com.alorma.github.ui.view.FABCenterLayout>
+</LinearLayout>
