--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:windowBackground">@color/accent</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
     <!-- Base application theme. -->
@@ -14,9 +15,13 @@
         <item name="android:windowActionModeOverlay">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">@color/accent</item>
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:title" />
+        <item name="android:icon">@android:color/transparent</item>
+        <item name="android:height">56dp</item>
         <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
     </style>
 
