--- a/app/src/main/res/layout/fab.xml
+++ b/app/src/main/res/layout/fab.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/fab"
-    android:layout_height="@dimen/fab"
-    android:id="@id/fabButton"
-    android:padding="@dimen/gapLarge"
-    android:scaleType="centerInside"
-    android:background="@drawable/fab_button" />
+<com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
+                                                       xmlns:fab="http://schemas.android.com/apk/res-auto"
+                                                       android:layout_width="wrap_content"
+                                                       android:layout_height="wrap_content"
+                                                       fab:colorNormal="@color/accent"
+                                                       fab:colorPressed="@color/accentDark"
+                                                       android:layout_alignParentBottom="true"
+                                                       android:layout_centerHorizontal="true"
+                                                       android:layout_marginBottom="16dp"
+                                                       android:layout_marginRight="16dp"
+                                                       android:layout_marginEnd="16dp"
+                                                       android:id="@id/fabButton"/>
