New issue activity layout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="button_press">2dp</dimen>
     <dimen name="button_press_elevation">4dp</dimen>
     <dimen name="menuSize">48dp</dimen>
+    <dimen name="fabLayoutSpacing">100dp</dimen>
 
     <!-- http://developer.android.com/design/style/metrics-grids.html -->
     <dimen name="gapMicro">2dp</dimen>
