--- a/app/src/main/res/layout/activity_new_issue.xml
+++ b/app/src/main/res/layout/activity_new_issue.xml
@@ -1,22 +1,49 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<com.alorma.github.ui.view.FABCenterLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                           xmlns:tools="http://schemas.android.com/tools"
+                                           xmlns:app="http://schemas.android.com/apk/res-auto"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                           app:top_id="@id/coloredLayout"
+                                           android:id="@+id/newFabLayout"
+                                           android:background="@color/gray_github_light">
 
-    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:indeterminate="true"
-        app:spb_sections_count="4"
-        app:spb_color="@color/accent"
-        app:spb_speed="2.0"
-        app:spb_stroke_width="4dp"
-        app:spb_stroke_separator_length="4dp"
-        app:spb_reversed="false"
-        app:spb_mirror_mode="false"
-        android:id="@id/smoothBar"
-        android:layout_gravity="top" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/gapLarge"
+        android:paddingStart="@dimen/gapLarge"
+        android:paddingRight="@dimen/fabLayoutSpacing"
+        android:paddingEnd="@dimen/fabLayoutSpacing"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.alorma.github.ui.activity.NewIssueActivity"
+        android:orientation="vertical"
+        android:id="@id/coloredLayout"
+        android:background="@color/accent">
+
+        <EditText
+            android:hint="@string/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTitle"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:background="@drawable/edit_text_material"
+            android:textSize="@dimen/textSizeLarge"/>
+
+        <EditText
+            android:lines="3"
+            android:layout_marginTop="@dimen/gapLarge"
+            android:hint="@string/leave_a_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:id="@+id/editBody"
+            android:background="@drawable/edit_text_material"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="@dimen/textSizeMedium"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,61 +53,23 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="com.alorma.github.ui.activity.NewIssueActivity"
+        android:layout_below="@id/coloredLayout"
+        android:id="@+id/pushAccessLayout"
+        android:background="@color/gray_github_light_selected"
         android:orientation="vertical">
 
         <EditText
-            android:hint="@string/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editTitle" />
-
-        <EditText
-            android:lines="4"
-            android:hint="@string/leave_a_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:hint="@string/labels"
             android:layout_marginTop="@dimen/gapLarge"
-            android:gravity="top"
-            android:id="@+id/editBody" />
+            android:background="@drawable/edit_text_material"
+            android:id="@+id/editLabels"/>
 
-        <ScrollView
+        <Spinner
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="?android:attr/listPreferredItemHeightLarge"
             android:layout_marginTop="@dimen/gapLarge"
-            android:id="@+id/pushAccessLayout">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="?android:attr/listPreferredItemHeightLarge"
-                    android:layout_marginTop="@dimen/gapLarge"
-                    android:id="@+id/spinnerAssignee" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/milestone"
-                    android:layout_marginTop="@dimen/gapLarge"
-                    android:visibility="gone" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="@dimen/gapLarge"
-                    android:visibility="gone" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:hint="@string/labels"
-                    android:layout_marginTop="@dimen/gapLarge"
-                    android:id="@+id/editLabels" />
-            </LinearLayout>
-        </ScrollView>
-
+            android:id="@+id/spinnerAssignee"/>
     </LinearLayout>
-</FrameLayout>
+</com.alorma.github.ui.view.FABCenterLayout>
