--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,4 +9,5 @@
     <item name="coloredLayout" type="id">coloredLayout</item>
     <item name="issueDetailInfo" type="id">issueDetailInfo</item>
     <item name="action_add_comment" type="id">action_add_comment</item>
+    <item name="action_close_issue" type="id">action_close_issue</item>
 </resources>
