Clean, refactor and update to lollipop

--- a/app/src/main/res/layout/ly_small_profile.xml
+++ b/app/src/main/res/layout/ly_small_profile.xml
@@ -33,7 +33,7 @@
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
 
-        <android.widget.EnhancedTextView
+        <fr.dvilleneuve.android.EnhancedTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearance"
