--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#FFFFFF</color>
     <color name="issue_state_open">#54A141</color>
     <color name="issue_state_close">#ffd67a4c</color>
+    <color name="defaultEnchancedColor">#00ff0000</color>
 
     <integer-array name="colorsSmooth">
         <item>@color/accent</item>
