--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="issueDetailInfo" type="id">issueDetailInfo</item>
     <item name="action_add_comment" type="id">action_add_comment</item>
     <item name="action_close_issue" type="id">action_close_issue</item>
+    <item name="fab_expand_menu_button" type="id"/>
 </resources>
