--- a/app/src/main/res/menu/repo_detail_activity.xml
+++ b/app/src/main/res/menu/repo_detail_activity.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/share_repo"
         android:title="@string/action_share_repo"
-        android:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"/>
 
     <item
-        android:title="@string/action_menu"
-        android:id="@+id/action_menu"
-        android:icon="@drawable/ic_menu_moreoverflow_mtrl_alpha"
-        android:showAsAction="always"
-        android:actionLayout="@layout/action_menu"/>
+        android:title="@string/show_parent"
+        android:id="@+id/action_show_parent"
+        app:showAsAction="never" />
+    <item
+        android:title="@string/menu_star"
+        android:id="@+id/action_star"
+        app:showAsAction="never"
+        android:orderInCategory="10"/>
+    <item
+        android:title="@string/menu_watch"
+        android:id="@+id/action_watch"
+        app:showAsAction="never"
+        android:orderInCategory="11" />
+    <item
+        android:title="@string/menu_repo_settings"
+        android:id="@+id/action_repo_settigs"
+        app:showAsAction="never"
+        android:orderInCategory="12" />
 
 </menu>
