--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,34 +1,30 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="actionBarStyle">@style/MyActionBar</item>
+    <style name="AppTheme.NoBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@color/accent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="colorPrimary">@color/accent</item>
         <item name="colorPrimaryDark">@color/accentDark</item>
+        <item name="colorAccent">@color/complementary</item>
+        <!-- You can also set colorControlNormal, colorControlActivated
+             colorControlHighlight & colorSwitchThumbNormal. -->
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
+
     <!-- Base application theme. -->
-    <style name="AppTheme.Dialog" parent="android:Theme.Holo.Dialog">
+    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowBackground">@color/gray_github_light</item>
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowActionModeOverlay">true</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@color/accent</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:title" />
-        <item name="android:icon">@android:color/transparent</item>
-        <item name="android:height">56dp</item>
-        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
-    </style>
-
-    <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@android:color/white</item>
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/white</item>
     </style>
 
     <style name="tab_repos">
