--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -6,9 +6,11 @@
               android:layout_height="match_parent"
               android:background="@color/gray_github_light">
 
+    <include layout="@layout/toolbar" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/content"/>
+        android:id="@+id/content"/>
 
 </LinearLayout>
