--- a/app/src/main/res/layout/generic_toolbar_no_drawer.xml
+++ b/app/src/main/res/layout/generic_toolbar_no_drawer.xml
@@ -1,17 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              tools:context="com.alorma.github.ui.activity.IssueDetailActivity"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:id="@+id/fabLayout">
+              android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/discussionFeed"/>
-
+        android:id="@+id/content"/>
 </LinearLayout>
