--- a/app/src/main/res/layout/new_issue_comment.xml
+++ b/app/src/main/res/layout/new_issue_comment.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar" />
 
     <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
         android:layout_width="match_parent"
@@ -32,4 +34,4 @@
         android:textColor="@android:color/black"
         style="@android:style/Widget.Holo.Light.EditText"/>
 
-</RelativeLayout>
+</LinearLayout>
