--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -2,10 +2,19 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              xmlns:card="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
+    <it.gmariotti.cardslib.library.view.CardViewNative
+        android:id="@+id/carddemo_largeimage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card:card_layout_resourceID="@layout/native_material_largeimage_card"
+        style="@style/card_external"
+        />
+<!--
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -54,5 +63,5 @@
                 android:layout_alignLeft="@+id/authorLogin"
                 android:layout_alignStart="@+id/authorLogin"/>
         </RelativeLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 </LinearLayout>
